--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-# version:     "0026--06-Sep-2022"
+# version:     "0027--17-Sep-2022"
 copyright: "2022"
-author: "catherine"
+author: "catherineeangel"
 name: "Catherine Angel Robin"
 title: "OS222: Operating Systems 2022-2"
 githublink: "https://github.com/catherineeangel/os222"
